--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ a {
   height: 600px;
   margin: 100px auto;
 }
-table, tr, th {
+table, tr, td {
   border: 1px solid #ddd;
   text-align: center;
 }
@@ -113,6 +113,17 @@ table {
   margin: 10px;
 }
 
-th, tr {
+td, tr {
   padding: 15px;
+  position: relative;
+}
+td {
+  width: 160px;
+  height: 160px;
+}
+img {
+  position: center;
+  max-width: 100%;
+  max-height: 100%;
+
 }
